hard-gists/1112928/run.log
=== Docker Run Log for 1112928 ===
Started at: Mi 29. Okt 11:51:55 CET 2025

[2025-10-29 11:51:56] START: Running container for 1112928
[2025-10-29 11:51:56] SUCCESS: Container db140c474616ec5ad625278f4f1bf7a0ceccd5ccdff3f74f9beabf1c4e40d74c started for 1112928
=== Container logs for 1112928 ===
  File "/snippet.py", line 14
    print "@%s: %s" % (status.user.screen_name, status.text)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1112928 ===
[2025-10-29 11:51:58] INFO: Container db140c474616ec5ad625278f4f1bf7a0ceccd5ccdff3f74f9beabf1c4e40d74c has stopped
